Create server schema
